# sra_to_features_pipeline

./: .dockerignore  .gitignore  0_install.sh  0_main.sh  1_main.py  2_run_multiple.py  Dockerfile  PIPELINE_SUMMARY.md  README.md  amplicons.bed  cleanup_install.sh  config.env  config.ini  extract_vcf.py  gene_list.txt  gene_regions.bed  install.py  install_dev.sh  install_pipeline  main.py  metadata.csv  metadata_table.csv  performance_check.sh  pipeline.py  pyproject.toml  regions.bed  requirements.txt  script.sh  setup.py  setup.sh  sra_table_selected.csv  sra_table_selected.txt  test_setup.sh  test_simple_imports.py
doc/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESTRUCTURING_SUMMARY.md  configuration.md  index.md  installation.md  quick_start.md
doc/user_guide/: basic_usage.md  cli_reference.md  index.md  input_data.md  ml_features.md  output_format.md  troubleshooting.md
scripts/: arg_handler.py  checks.py  feature_generation.py  get_config_value.py  log_scripts.py  pipeline.py  quality_control.py  snippet.py  sra_to_vcf.py
scripts/install/: install_snpeff.sh  install_tools.sh  setup_reference.py  update_config.py
src/: prepare_files.py
src/sra_pipeline/: __init__.py
src/sra_pipeline/cli/: __init__.py  main.py
src/sra_pipeline/config/: __init__.py  settings.py
src/sra_pipeline/core/: __init__.py  alignment.py  download.py  feature_extraction.py  pipeline.py  quality_control.py  variant_calling.py
src/sra_pipeline/models/: __init__.py  features.py
src/sra_pipeline/utils/: __init__.py  logging.py  ml_features.py
test/: test_imports.py  test_ml_features.py  test_pipeline.py  test_pydantic_v2.py
